--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -248,9 +248,10 @@
           </td>
         <%end%>
         <%if params[:role]=="jugador"%>
-        <td>
+        <td id="td-grupo">
           <%=user.get_group%>
         </td>
+        
         <td>
           <%=user.role%>
         </td>
