--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -123,24 +123,30 @@
           class: "form-control", required: true%>
         <% end %>
       </div>
-      <div class="form-group" id="group">
-        <%= f.label 'Subenlace:' %><br>
-        <%= f.input_field :subenlace_id, collection: @subenlaces, 
-        class: "form-control", :label_method => :full_name, 
-          :value_method => :id %>
-      </div>
-      <div class="form-group" id="group">
-        <%= f.label 'Enlace:' %><br>
-        <%= f.input_field :enlace_id, collection: @enlaces, 
-        class: "form-control", :label_method => :full_name, 
-          :value_method => :id %>
-      </div>
-      <div class="form-group" id="group">
-        <%= f.label 'Coordinador:' %><br>
-        <%= f.input_field :coordinador_id, collection: @coordinadores, 
-        class: "form-control", :label_method => :full_name,
-         :value_method => :id %>
-      </div>
+      <% if @user.role == "jugador"%>
+        <div class="form-group" id="group">
+          <%= f.label 'Subenlace:' %><br>
+          <%= f.input_field :subenlace_id, collection: @subenlaces, 
+          class: "form-control", :label_method => :full_name, 
+            :value_method => :id %>
+        </div>
+      <%end%>
+      <% if @user.role == "jugador" || @user.role == "subenlace"%>
+        <div class="form-group" id="group">
+          <%= f.label 'Enlace:' %><br>
+          <%= f.input_field :enlace_id, collection: @enlaces, 
+          class: "form-control", :label_method => :full_name, 
+            :value_method => :id %>
+        </div>
+      <%end%>
+      <% if @user.role == "jugador" || @user.role == "subenlace" || @user.role == "enlace"%>
+        <div class="form-group" id="group">
+          <%= f.label 'Coordinador:' %><br>
+          <%= f.input_field :coordinador_id, collection: @coordinadores, 
+          class: "form-control", :label_method => :full_name,
+           :value_method => :id %>
+        </div>
+      <%end%>
       <div class="form-group" id="group">
         <%= f.label 'Grupo:' %><br>
         <% if current_user.admin? || current_user.coordinador?%>
