--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,7 @@
 			<%else%>
 				<%= image_tag "default.jpg", :size => '30x30' %>
 			<% end %> 
-		<%= current_user.last_name %>
+		<%= current_user.full_name %>
       <span class="caret"></span>
     </button>
     <ul class="dropdown-menu" role="menu">
