--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,13 +1,10 @@
-<h1>Listing messages</h1>
-
-<table>
+<h1>Lista de mensajes</h1>
+<table class="table table-bordered table-striped table-hover">
   <thead>
     <tr>
-      <th>User</th>
-      <th>Message</th>
-      <th>Deep</th>
-      <th></th>
-      <th></th>
+      <th>ID del mensaje</th>
+      <th>Mensaje</th>
+      <th>Recibieron el mensaje</th>
       <th></th>
     </tr>
   </thead>
@@ -15,12 +12,10 @@
   <tbody>
     <% @messages.each do |message| %>
       <tr>
-        <td><%= message.user_id %></td>
+        <td><%= message.id %></td>
         <td><%= message.message %></td>
-        <td><%= message.deep %></td>
-        <td><%= link_to 'Show', message %></td>
-        <td><%= link_to 'Edit', edit_message_path(message) %></td>
-        <td><%= link_to 'Destroy', message, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>#</td>
+        <td><%= link_to 'Ver detalle', message %></td>
       </tr>
     <% end %>
   </tbody>
