--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -57,8 +57,9 @@
       <% if current_user.admin? || current_user.coordinador? %>
         <div class="form-group">
           <div class="checkbox">
-            <%= f.input :enabled, class: "form-control", 
-            :label => '¿Es usuario del sistema?' %>
+            <label>
+              <input type="checkbox" id="is_user"> ¿Es usuario del sistema?
+            </label>
           </div>
         </div>
         <div class="form-group">
@@ -96,8 +97,7 @@
       </div>
       <div class="form-group">
         <%= f.label 'Fecha de Registro' %><br>
-        <%= f.date_select :register_date, 
-          :html => { :class => 'form-control' } %>
+        <%= f.date_select :register_date,  :html => { :class => 'form-control' } %>
       </div>
       
       <div class="form-group">
@@ -128,8 +128,7 @@
           <%= f.label 'Subenlace:' %><br>
           <%= f.select :subenlace_id, options_for_select(
             [['', '0']].concat(
-           @subenlaces.map{|c|[c.full_name, c.id]}), @user.subenlace_id), 
-            include_blank: false, class: 'form-control'%>
+           @subenlaces.map{|c|[c.full_name, c.id]}), @user.subenlace_id), include_blank: false, class: 'form-control'%>
         </div>
       <%end%>
       <% if @user.role == "jugador" || @user.role == "subenlace"%>
@@ -137,17 +136,15 @@
           <%= f.label 'Enlace:' %><br>
           <%= f.select :enlace_id,options_for_select(
             [['', '0']].concat(
-           @enlaces.map{|c|[c.full_name, c.id]}), @user.enlace_id), 
-            label_html: { class: 'my_class' }, include_blank: false%>
+           @enlaces.map{|c|[c.full_name, c.id]}), @user.enlace_id), label_html: { class: 'my_class' }, include_blank: false%>
         </div>
       <%end%>
-      <% if @user.jugador? || @user.subenlace? || @user.enlace? %>
+      <% if @user.role == "jugador" || @user.role == "subenlace" || @user.role == "enlace"%>
         <div class="form-group" id="group">
           <%= f.label 'Coordinador:' %><br>
           <%= f.select :coordinador_id, options_for_select(
             [['', '0']].concat(
-           @coordinadores.map{|c|[c.full_name, c.id]}), @user.coordinador_id), 
-           include_blank: false, class: 'form-control'%>
+           @coordinadores.map{|c|[c.full_name, c.id]}), @user.coordinador_id), include_blank: false, class: 'form-control'%>
         </div>
       <%end%>
       <div class="form-group" id="group">
